fix distorted slide labels

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -524,7 +524,7 @@ textarea {
 	width: 90%;
 }
 
-label {
+.contact-form label {
 	padding-top: 20px;
 }
 
